--- a/i18n/translations.csv
+++ b/i18n/translations.csv
@@ -1,6 +1,6 @@
 keys,fr,en
 :, :,:
-
+,,
 stat.MovementSpeed,Vitesse,Move Speed
 stat.Health,Vie,Health
 stat.Attack,Atq,Atk
@@ -10,7 +10,7 @@ stat.AttackViewDistance,Dist Vision,View Range
 stat.InventorySize,Inventaire,Inventory
 stat.PickupRange,Portée Collecte,Pickup Range
 stat.TargetSearchCooldown,Cooldown Recherche,Search CD
-
+,,
 skill.pink_transporter.name,Acheter Transporter,Buy Transporter
 skill.pink_transporter.description,Spécialisé dans le transport d'objets,Specialized in fast item transport
 skill.red_attacker.name,Acheter Attaquant,Buy Attacker
@@ -23,10 +23,10 @@ skill.blue_tank.name,Acheter Tank,Buy Tank
 skill.blue_tank.description,Robuste et résistant aux dégâts,Sturdy and resistant to damage
 skill.black_miner.name,Acheter Mineur,Buy Miner
 skill.black_miner.description,Mine la pierre,Mines stone
-
+,,
 skill.health.name,PV !,HP!
 skill.health.description,Plus de PV !,More HP!
-
+,,
 skill.small_inventory.name,Petit inventaire,Small Inventory
 skill.small_inventory.description,Augmente légèrement la taille de l'inventaire,Slightly increases inventory size
 skill.medium_inventory.name,Inventaire moyen,Medium Inventory
@@ -37,7 +37,7 @@ skill.huge_inventory.name,Inventaire énorme,Huge Inventory
 skill.huge_inventory.description,Augmente énormément la taille de l'inventaire,Massively increases inventory size
 skill.infinite_inventory.name,Inventaire infini,Infinite Inventory
 skill.infinite_inventory.description,Capacité d'inventaire illimitée,Unlimited inventory capacity
-
+,,
 skill.wooden_sword.name,Épée en bois,Wooden Sword
 skill.wooden_sword.description,Augmente légèrement l'attaque,Slightly increases attack
 skill.stone_sword.name,Épée en pierre,Stone Sword
@@ -48,7 +48,7 @@ skill.battle_axe.name,Hache de combat,Battle Axe
 skill.battle_axe.description,Augmente énormément l'attaque,Massively increases attack
 skill.infinite_sword.name,Épée infinie,Infinite Sword
 skill.infinite_sword.description,Attaque illimitée,Unlimited attack
-
+,,
 skill.wooden_shield.name,Bouclier en bois,Wooden Shield
 skill.wooden_shield.description,Augmente légèrement la vie max,Slightly increases max health
 skill.stone_shield.name,Bouclier en pierre,Stone Shield
@@ -59,7 +59,7 @@ skill.obsidian_shield.name,Bouclier en obsidienne,Obsidian Shield
 skill.obsidian_shield.description,Augmente énormément la vie max,Massively increases max health
 skill.infinite_shield.name,Bouclier infini,Infinite Shield
 skill.infinite_shield.description,Vie illimitée,Unlimited health
-
+,,
 skill.leather_boots.name,Bottes en cuir,Leather Boots
 skill.leather_boots.description,Augmente légèrement la vitesse,Slightly increases move speed
 skill.copper_boots.name,Bottes en cuivre,Copper Boots
@@ -68,17 +68,20 @@ skill.iron_boots.name,Bottes en fer,Iron Boots
 skill.iron_boots.description,Augmente grandement la vitesse,Greatly increases move speed
 skill.wings.name,Ailes,Wings
 skill.wings.description,Vitesse de déplacement illimitée,Unlimited move speed
-
+,,
 item.MaskTransporter,Transporter,Transporter
 item.MaskAttacker,Attaquant,Attacker
 item.MaskFarmer,Fermier,Farmer
 item.MaskLumberjack,Bûcheron,Lumberjack
 item.MaskTank,Tank,Tank
 item.MaskMiner,Mineur,Miner
-
+,,
 item.Log,Bûche,Log
 item.Pebble,Caillou,Pebble
 item.Cereal,Céréale,Cereal
 item.Soul,Âme,Soul
-
+,,
 cost,Coût,Cost
+,,
+ui.tutorial.totem,"Cliquez sur le totem pour changer le masque du Héro et son rôle : Rose (Transport d'objets), Vert (Bois), Bleu (Défense), Rouge (Attaque), Orange (Blé), Noir (Pierre)","Click the totem to swap hero's masks and change their job: Pink (Item Transport), Green (Wood), Blue (Defend), Red (Attack), Orange (Wheat), Black (Pebble)"
+ui.tutorial.minitotem,"Cliquez sur les mini-totems pour acheter des masqués, et les améliorer","Click on the mini totems to buy masked and upgrade them"
